edit projects section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class='header wrapper'>
         <div class='header__logo'>
-            <img src='/src/icons/logoWD.svg' alt='logotype WD'/>
+            <img src='/src/icons/logoWD.svg' id='logotype' alt='logotype WD'/>
         </div>
         <nav class='header__nav'>
             <ul class='header__navList'>
@@ -206,4 +206,5 @@
         </ul>
     </footer>
 </body>
+<script src='/script.js'></script>
 </html>
